--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
 
 body {
     background: rgb(0, 0, 0);
+    position: relative;
 }
 
 .form {
     max-height: 100vh;
     width: 600px;
+    position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
